# dossier_github

cyril-flips-master-code/code/: CMakeLists.txt  README
cyril-flips-master-code/code/data/: 100_random_points.cin  faces.cin  faces_2.cin  faces_simple.cin  points.cin  settings.cin
cyril-flips-master-code/code/headers/: draw.h  parsing.h  triangulation.h
cyril-flips-master-code/code/python/: graphs.ipynb  triangulation_simple.ipynb
cyril-flips-master-code/code/resultats/: output.cin
cyril-flips-master-code/code/sources/: demo.cpp  draw.cpp  parsing.cpp  triangulation.cpp
